# Data-Collector

./: .gitignore  TODO.md  live-market.py  pyproject.toml
src/data_collector/: data_collector_utils.py  discord_messager.py  main.py
src/data_collector/logger/: csv_logger.py  oi_logger.py
src/data_collector/oi_collector/: oi_collector.py
src/data_collector/resources/: nse-fno-stocks.csv
src/data_collector/symbol_management/: fyers_symbols.py
src/data_collector/websocket/: fyers_ws.py
tests/: oi_fetch.py  test_csv_logger.py  test_data_collector_utils.py  test_fyers_symbols.py
