[project]
name = "data-collector"
version = "1.0.1"
description = "Live-Data Collection "
dependencies = [
    "numpy",
    "pandas",
    "pytest"
]

[project.scripts]
data-collector = "data_collector.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_collector = ["resources/*.csv"]